# Autonomous_Ground_Rover

./: Readme.md
Rover_esp32_control/Rover_control/: depth_JRD301_copy_20260606140003.ino
src/custom_rover_nodes/: CMakeLists.txt  package.xml  pedestrian_follower.hpp
src/custom_rover_nodes/include/custom_rover_nodes/: depth_decoder_node.hpp  pedestrian_follower.hpp
src/custom_rover_nodes/src/: depth_decoder_node.cpp  pedestrian_decoder_node.py  pedestrian_follower.cpp  rover_control_node.py  rover_pedestrian_control.py
src/rover_perception/: package.xml  setup.py
src/rover_perception/launch/: rover_perception.launch.py
