<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_perception</name>
  <version>0.0.0</version>
  <description>Hardware-accelerated perception pipeline for the Orin</description>
  <maintainer email="admin@ubuntu.com">admin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>isaac_ros_tensor_list_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
